# goit-python-hw-21-restapi

./: README.md  main.py  pyproject.toml
migrations/versions/: 82272129a644_init.py
src/: schemas.py
src/database/: models.py
